--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,13 @@
-altgraph==0.10.2
-ansible==2.0.0.2
-awscli==1.9.20
-Babel==2.1.1
-bdist-mpkg==0.5.0
-blinker==1.4
-boto==2.38.0
-botocore==1.3.20
-colorama==0.3.3
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.7
-django-appconf==1.0.1
-django-bootstrap-toolkit==2.15.0
-django-classy-tags==0.6.2
-django-easy-maps==0.9.2
 django-toolbelt==0.0.1
 djangorestframework==3.3.1
-docutils==0.12
-ecdsa==0.13
-extensions==0.3
-Fabric==1.10.2
-Flask==0.10.1
-Flask-Babel==0.9
-Flask-Login==0.3.2
-Flask-Mail==0.9.1
-Flask-OpenID==1.2.5
-Flask-SQLAlchemy==2.1
-Flask-WhooshAlchemy==0.55a0
-Flask-WTF==0.12
-flup==1.0.2
-geopy==1.11.0
 gunicorn==19.3.0
-httplib2==0.9.2
-itsdangerous==0.24
-Jinja2==2.8
-jmespath==0.9.0
-macholib==1.5.1
-MarkupSafe==0.23
-paramiko==1.16.0
 Pillow==3.0.0
-psycopg2==2.6.1
 py2app==0.7.3
-pyasn1==0.1.9
-pycrypto==2.6.1
-pyOpenSSL==0.13.1
-pyparsing==2.0.1
-pystache==0.5.4
-python-dateutil==2.4.2
+python-dateutil==1.5
 python-openid==2.2.5
-pytz==2013.7
-PyYAML==3.11
 requests==2.8.1
-rsa==3.3
-six==1.10.0
-speaklater==1.3
-SQLAlchemy==1.0.9
-static==1.1.1
 static3==0.6.1
-Twisted==13.2.0
-Unipath==1.1
-Werkzeug==0.11.2
-Whoosh==2.7.0
-WTForms==2.0.2
-xattr==0.6.4
-zope.interface==4.1.1
+wheel==0.24.0
