--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
-dj-database-url==0.3.0
-dj-static==0.0.6
 Django==1.7
+argparse==1.2.1
+django-appconf==1.0.1
+django-classy-tags==0.6.2
+django-easy-maps==0.9.2
 django-toolbelt==0.0.1
 djangorestframework==3.3.1
+geopy==1.11.0
+foreman==0.9.7
+futures==3.0.3
 gunicorn==19.3.0
+psycopg2==2.4.5
+six==1.10.0
+wsgiref==0.1.2
+dj-database-url==0.3.0
+dj-static==0.0.6
 Pillow==3.0.0
 py2app==0.7.3
 python-dateutil==1.5
 python-openid==2.2.5
 requests==2.8.1
+requests-futures==0.9.5
 static3==0.6.1
 wheel==0.24.0
-easy_maps==0.9.2
+whitenoise==2.0.4
